Fix CORS multiple origins